[package]
name = "proxy-pulse-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.55", features = ["derive"] }
colored = "3.1.1"
dashmap = "6.1.0"
futures = "0.3.31"
heck = "0.5.0"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = "0.13.1"
tokio = { version = "1.49.0", features = ["full"] }
tokio-socks = "0.5.2"
url = "2.5.8"
